Fixing Button on Firefox

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -20,7 +20,7 @@
 
 	border-radius: 4px;
 	color: white;
-	/*background-color: #ce3d3d;*/
+	background-color: #ce3d3d;
 	/*background-image: linear-gradient(
 		to right,
 		rgb(255, 1, 126),
@@ -52,6 +52,7 @@
 }
 
 .CelebrityNftBuy p::before {
+	content: '';
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -59,7 +60,15 @@
 	bottom: 0;
 	border-radius: 4px;
 	padding: 3px;
-
+	/*
+	background: linear-gradient(
+	background-color: #ce3d3d;
+	/*background: linear-gradient(
+		to right,
+		rgb(255, 1, 126),
+		rgb(169, 1, 250),
+		rgb(3, 238, 254)
+	);*/
 	-webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
 	-webkit-mask-composite: destination-out;
 	mask-composite: exclude;
@@ -77,15 +86,6 @@
 	);
 }
 
-.Gradient:hover {
-	transform: scale(1.1);
-	background: none;
-	border: none;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: contain;
-}
-
 .Gradient p::before {
 	background: linear-gradient(
 		to right,
@@ -93,7 +93,6 @@
 		rgb(169, 1, 250),
 		rgb(3, 238, 254)
 	);
-	-webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
 }
 
 .Green {
@@ -102,7 +101,6 @@
 
 .Green p::before {
 	background: #00c12c;
-	-webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
 }
 
 .Grey {
@@ -113,10 +111,7 @@
 }
 
 .Grey p::before {
-	font-size: 12px;
-	color: #868686;
 	background: #c4c4c4;
-	-webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
 }
 
 /**********************************************/
